--- a/BST260 Code and Plots.Rmd
+++ b/BST260 Code and Plots.Rmd
@@ -18,7 +18,7 @@ library(ggplot2)
 
 ```
 
-##Introduction
+## Introduction
 
 The past several years have ushered in both excitement and dismay at the influx of both protective and anti-transgender policies at the state level. In 2020 alone, just about half of US states (e.g., 23 states) introduced anti-transgender bills that spanned aspects of transgender life, health and wellness related to exclusion from athletics, implementing barriers to health care, and policies that limit the decision-making ability for transgender youth and their families. Some other states responded to transgender needs by expanding access to health care, and codifying protections(ACLU, 2022). The political landscape between 2016 and 2020 set the stage for transgender human rights to be fought for and against in local, state, and federal policy.
 
@@ -31,7 +31,7 @@ Policy data was obtained from the Movement Advancement Project’s (MAP) aggrega
 In 2010, both Arizona and Nevada had Gender Identity Tallies that were “negative” – the lowest possible score for gender identity protections given by MAP. In 2020, Arizona maintained its low score and Nevada increased to the highest possible score at “High”.
 Data was obtained on general mental health from the state BRFSS, a Centers for Disease Control and Prevention- supported survey that “... collects state data about U.S residents regarding their health-related risk behaviors, chronic health conditions, and use of preventative services”. Data from two states, Arizona and Nevada were used from the BRFSS Surveys from 2010 and 2020. These dates align with the state of LGBTQ policy as compiled by MAP.
 	
-	The primary analysis was conducted with the full population of US adults. The analysis was focused on the full population of Arizona and Nevada respondents for the following reasons: 1) not all states collected information on gender identity and sexual orientation in 2010, this included Arizona and Nevada, 2) the full population may include individuals who are LGBTQ who may not have identified as such on the survey even if given the option. 3) the existence (or non-existence) of gender identity policies likely affect the number of individuals who self-identify as sexual or gender minorities. 
+The primary analysis was conducted with the full population of US adults. The analysis was focused on the full population of Arizona and Nevada respondents for the following reasons: 1) not all states collected information on gender identity and sexual orientation in 2010, this included Arizona and Nevada, 2) the full population may include individuals who are LGBTQ who may not have identified as such on the survey even if given the option. 3) the existence (or non-existence) of gender identity policies likely affect the number of individuals who self-identify as sexual or gender minorities. 
 
 *Read in Behavioral Risk Factor Surveillance System data from 2010*
 
@@ -42,7 +42,7 @@ brfss10 <- read_xpt("/Users/kierantodd/Desktop/CDBRFS10.XPT",
   setnames(old = c("IYEAR","_STATE", "MENTHLTH"), new = c("YEAR","STATE", "MENTHLTH"))
 ```
 
-## Read in Behavioral Risk Factor Surveillance System data from 2020 
+*Read in Behavioral Risk Factor Surveillance System data from 2020*
 
 ```{r}
 brfss20 <- read_xpt("/Users/kierantodd/Desktop/LLCP2020.XPT",
@@ -51,7 +51,7 @@ brfss20 <- read_xpt("/Users/kierantodd/Desktop/LLCP2020.XPT",
   setnames(old = c("IYEAR","_STATE", "MENTHLTH"), new = c("YEAR","STATE", "MENTHLTH"))
 ```
 
-##Combine BRFSS 2010 and BRFSS 2020 mental health data by State 
+*Combine BRFSS 2010 and BRFSS 2020 mental health data by State* 
 
 ```{r}
 
@@ -60,7 +60,7 @@ brfss_all <- na.omit(brfss_all)
 
 ```
 
-##Filter by Nevada and Arizona for the simple 2x2 difference-in-differences model 
+*Filter by Nevada and Arizona for the simple 2x2 difference-in-differences model*
 
 ```{r}
 brfss_all <- brfss_all |> 
@@ -76,25 +76,21 @@ na.omit(brfss_all)
 ```
 
 
-##Rename States by their FIPS codes to the State Abbreviations
+*Rename States by their FIPS codes to the State Abbreviations*
 ```{r}
 brfss_all$STATE = ifelse(brfss_all$"STATE" == 5,"Arizona","Nevada")
 ```
 
 
-##Further clean data so that only 2010 and 2020 interview dates exist, also omit any rows that have no values
+*Further clean data so that only 2010 and 2020 interview dates exist, also omit any rows that have no values*
+
 ```{r}
 brfss_analysis <- brfss_all %>% filter(YEAR %in% c(2010,2020))
 brfss_analysis <- na.omit(brfss_analysis)
 ```
 
-##run a simple 2x2 difference in difference model using linear probablility model 
-```{r}
-did_model1 <- lm(outcome ~ factor(STATE)*factor(YEAR), data=brfss_analysis)
-summary(did_model1)
-```
 
-# Plotting a density plot of mental health bad days in the pre period
+*Plotting a density plot of mental health bad days in the pre period*
 ```{r}
 ggplot(data=brfss_analysis[brfss_analysis$YEAR==2010], aes(x=outcome, group=as.factor(STATE)))+
   scale_x_continuous(breaks = seq(from = 0, to = 30, by = 5)) +
@@ -104,7 +100,10 @@ ggplot(data=brfss_analysis[brfss_analysis$YEAR==2010], aes(x=outcome, group=as.f
   ggtitle("Number of Bad Mental Health Days (in a month) in 2010")
 ```
 
-# Plotting a density plot of mental health bad days in the post period (2020)
+Figure 1 depicts a density plot of the number of bad mental health days in the pre-treatment period by whether or not a state eventually receives treatment (i.e., Arizona relative to Nevada). These overlaid density plots are relatively like each other in 2010. 
+
+
+*Plotting a density plot of mental health bad days in the post period (2020)*
 ```{r}
 ggplot(data=brfss_analysis[brfss_analysis$YEAR==2020], aes(x=outcome, group=as.factor(STATE)))+
   scale_x_continuous(breaks = seq(from = 0, to = 30, by = 5)) +
@@ -114,7 +113,10 @@ ggplot(data=brfss_analysis[brfss_analysis$YEAR==2020], aes(x=outcome, group=as.f
   ggtitle("Number of Bad Mental Health Days (in a month) in 2020")
 ```
 
-# Creating a plot to test for parallel pre-trends
+Figure 2 depicts the density of the outcome in the post-treatment period again disaggregated by treatment status. The plots differ more from each other in 2020 than they did in 2010.
+
+
+*Creating a plot to average mental health outcome between 2010 and 2020*
 
 ```{r}
 
@@ -129,3 +131,32 @@ ggplot( data=agg, aes(x=as.factor(YEAR), y=val, group=STATE,
   ggtitle("Mental Health Trajectories for Arizona v. Nevada")
 
 ```
+
+
+
+*Run a simple 2x2 difference in difference model using a linear probability model*
+```{r}
+did_model1 <- lm(outcome ~ factor(STATE)*factor(YEAR), data=brfss_analysis)
+summary(did_model1)
+```
+
+Data from 15304 adults who participated in the BRFSS in 2010 and 2020 – 9167 adults from Arizona and 6137 adults from Nevada. In this simple 2x2 difference-in-difference analysis, being in was associated with a statistically significant increase in the number of bad mental health days among those who live in Nevada.
+
+
+  In 2010, on average, the number of bad mental health days in Nevada was 1.04 days lower than in Arizona.  
+  
+  In 2020, on average, the number of bad mental health days in Nevada was 0.29 days less than the average number of bad mental health days in Nevada in 2010.
+  
+  The difference-in-difference estimate we can interpret as follows: in 2020, the number of bad mental health days among those in Nevada was, on average, an additional 0.63 days more than Arizona in the same year. If the difference-in-difference identifying assumptions hold, then this represents the causal effect of an increase in LGBTQ policy tally in Nevada relative to Arizona that maintained a low LGBTQ policy tally
+
+
+Conclusion
+
+The data analysis suggests that Nevada, a state that Nevada may have had an uncommon shock that Arizona did not experience, does not allow us to distinguish the effect of treatment from the effect of the uncommon shock. Additionally, it is of note that the trajectory for both Arizona and Nevada shows that the number of bad mental health days was in the positive direction. This might require more theoretical investigation into what other events, political or not, that may be impacting overall mental health for residents in those states. 
+Potential Violations of difference-in-difference identifying assumptions: parallel pre-trends
+
+In this analysis we assumed that the pre-trends were parallel among those who lived in Nevada and those who lived in Arizona. However, for several reasons, it could be possible that this is not true. Some economists argue that the parallel pre-trends assumption may be less valid over a longer period of time. Particularly if changes in the make-up of the populations of Arizona and Nevada, whereby the study period of ten years (2010 - 2020) may influence whether parallel pre-trends are a valid assumption to make. 
+
+*Future steps for future analyses*
+
+The purpose of this simple difference-in-difference analysis was to see if there were any significant differences in the change of the average number of bad mental health days between a state that had no change in policy tally for affirming gender identity, and a state that had a high level of change in policy tally for affirming gender identity, as defined by MAP. To account for time-invariant, state-specific factors would allow us to better account for differences in average bad mental health days across all states at baseline (2010) – using state fixed effects and including many more, if not all states, would yield a more robust and useful analysis in some ways.
