--- a/index.rmd
+++ b/index.rmd
@@ -1,5 +1,5 @@
 ---
 title: "Home"
 ---
-Hello, website!
+A Simple Difference-in-Differences Analysis of the Association between State-Level Transgender Policy and Number of Bad Mental Health Days in Nevada and Arizona
 
